# open-desk-lamp-firmware

./: .gitignore  .travis.yml  LICENSE  README.md
src/: CMakeLists.txt  encoder.c  encoder.h  leds.c  leds.h  main.c  utils.h
utils/: lut_gen.m
